// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tabbar-appbar > dist > app.js 1`] = `
"const require_other = require("./other-pc8xb2s3.js");
App({
	globalData: {},
	onLaunch() {}
});
"
`;

exports[`tabbar-appbar > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json",
  "tabBar": {
    "custom": true
  },
  "appBar": {},
  "usingComponents": {
    "Test": "/components/Test"
  }
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.js 1`] = `
"const require_other = require("../other-pc8xb2s3.js");
Component({});
"
`;

exports[`tabbar-appbar > dist > app-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.wxml 1`] = `"<view>hello weapp-vite! from app-bar</view>"`;

exports[`tabbar-appbar > dist > app-bar/index.wxss 1`] = `
".ss {
  color: red;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > async2-dtq8orli.js 1`] = `
"const require_other = require("./other-pc8xb2s3.js"), async2 = "async2";
var async2_default = 2;
exports.async2 = async2, exports.default = async2_default;
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.js 1`] = `
"const require_other = require("../../other-pc8xb2s3.js");
Component({ lifetimes: { async attached() {
	const mod = await require.async("../../pages/index/async.js");
	console.log(mod);
} } });
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`tabbar-appbar > dist > components/Test/index.js 1`] = `
"const require_other = require("../../other-pc8xb2s3.js");
Component({});
"
`;

exports[`tabbar-appbar > dist > components/Test/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Test/index.wxml 1`] = `"<view>Navbar</view>"`;

exports[`tabbar-appbar > dist > components/Test/index.wxss 1`] = `
".test {
  clear: both;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.js 1`] = `
"const require_other$1 = require("../other-pc8xb2s3.js"), a = require_other$1.require_other();
Component({ lifetimes: { async attached() {
	console.log(a);
	const mod = await require.async("../pages/index/async.js");
	console.log(mod);
} } });
"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxml 1`] = `"<view class="pb-8 pt-4 bg-[#af6ec5] flex justify-center">hello weapp-vite! aa</view>"`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxss 1`] = `
".a {
  color: red;
}/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > other-pc8xb2s3.js 1`] = `
"var __defProp = Object.defineProperty, __getOwnPropDesc = Object.getOwnPropertyDescriptor, __getOwnPropNames = Object.getOwnPropertyNames, __hasOwnProp = Object.prototype.hasOwnProperty, __esmMin = (fn, res) => () => (fn && (res = fn(fn = 0)), res), __commonJSMin = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports), __export = (target, all) => {
	for (var name in all) __defProp(target, name, {
		get: all[name],
		enumerable: true
	});
}, __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") {
		for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) if (key = keys[i], !__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
}, __toCommonJS = (mod) => __copyProps(__defProp({}, "__esModule", { value: true }), mod), require_other = /* @__PURE__ */ __commonJSMin(((exports, module) => {
	const other = "other";
	module.exports = { other };
}));
Object.defineProperty(exports, "__esmMin", {
	enumerable: true,
	get: function() {
		return __esmMin;
	}
}), Object.defineProperty(exports, "__export", {
	enumerable: true,
	get: function() {
		return __export;
	}
}), Object.defineProperty(exports, "__toCommonJS", {
	enumerable: true,
	get: function() {
		return __toCommonJS;
	}
}), Object.defineProperty(exports, "require_other", {
	enumerable: true,
	get: function() {
		return require_other;
	}
});
"
`;

exports[`tabbar-appbar > dist > pages/index/async.js 1`] = `
"const require_other = require("../../other-pc8xb2s3.js"), async = "async";
var async_default = 1;
exports.async = async, exports.default = async_default;
"
`;

exports[`tabbar-appbar > dist > pages/index/index.js 1`] = `
"const require_other$1 = require("../../other-pc8xb2s3.js");
var part_exports = {};
require_other$1.__export(part_exports, {
	default: () => part_default,
	part: () => part$1
});
var part$1, part_default, init_part = require_other$1.__esmMin((() => {
	part$1 = "part", part_default = 3;
}));
const { part } = (init_part(), require_other$1.__toCommonJS(part_exports)), { other } = require_other$1.require_other();
Page({ async onLoad() {
	const mod = await require.async("./async"), mod2 = await Promise.resolve().then(() => require("../../async2-dtq8orli.js"));
	console.log(part, other, mod, mod2);
} });
"
`;

exports[`tabbar-appbar > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`tabbar-appbar > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`tabbar-appbar > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`tabbar-appbar > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`tabbar-appbar > dist 1`] = `
[
  "app-bar/index.js",
  "app-bar/index.json",
  "app-bar/index.wxml",
  "app-bar/index.wxss",
  "app.js",
  "app.json",
  "async2-dtq8orli.js",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Test/index.js",
  "components/Test/index.json",
  "components/Test/index.wxml",
  "components/Test/index.wxss",
  "custom-tab-bar/index.js",
  "custom-tab-bar/index.json",
  "custom-tab-bar/index.wxml",
  "custom-tab-bar/index.wxss",
  "other-pc8xb2s3.js",
  "pages/index/async.js",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "sitemap.json",
  "theme.json",
]
`;
